--- a/src/assets/scss/cmp/_home-section-2.scss
+++ b/src/assets/scss/cmp/_home-section-2.scss
@@ -118,6 +118,7 @@
 
         .bg-1 {
             align-self: end;
+            margin-inline-end: -100px;
         }
     }
 }
